--- a/package.json
+++ b/package.json
@@ -1,40 +1,43 @@
 {
   "name": "travel-app",
   "version": "1.0.0",
-  "main": "webpack.config.js",
- "scripts": {
-  "build": "webpack --mode production",
-  "start": "node src/server/server.js",
-  "dev": "webpack serve --mode development --open",
-  "test": "jest"
-},
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "description": "A travel planning app with API integration.",
+  "main": "src/server/server.js",
+  "scripts": {
+    "start": "node src/server/server.js",
+    "build": "webpack --mode production",
+    "test": "jest",
+    "dev": "webpack serve --mode development --open"
+  },
+  "engines": {
+    "node": ">=18"
+  },
   "dependencies": {
-    "body-parser": "^1.20.3",
+    "axios": "^1.3.0",
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.26.9",
+    "@babel/plugin-transform-runtime": "^7.26.9",
     "@babel/preset-env": "^7.26.9",
-    "babel-jest": "^29.7.0",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^9.2.1",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^7.1.2",
+    "eslint": "^7.32.0",
+    "eslint-loader": "^4.0.2",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
     "mini-css-extract-plugin": "^2.9.2",
     "sass": "^1.85.0",
-    "sass-loader": "^16.0.4",
+    "sass-loader": "^16.0.5",
     "style-loader": "^4.0.0",
+    "supertest": "^6.3.3",
     "webpack": "^5.98.0",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0",
-    "webpack-merge": "^6.0.1",
-    "workbox-webpack-plugin": "^7.3.0"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.2.0"
   }
 }
