--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Ignore environment variables
+.env
 # Node modules (can be recreated by running npm install)
 node_modules/
 
@@ -18,3 +20,4 @@ build/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
