--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-GEONAMES_API_KEY=your_geonames_api_key_here
-WEATHERBIT_API_KEY=your_weatherbit_api_key_here
-PIXABAY_API_KEY=your_pixabay_api_key_here
+# GEONAMES_API_KEY=your_geonames_api_key_here
+# WEATHERBIT_API_KEY=your_weatherbit_api_key_here
+# PIXABAY_API_KEY=your_pixabay_api_key_here
